[package]
name = "xcm-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "full", "bit-vec"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = false }
color-eyre = "0.5.11"
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", features=["full_crypto"] }
sp-keyring  = { version = "6.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27"}
structopt = "0.3.25"
subxt = { git = "https://github.com/paritytech/subxt", tag = "v0.22.0" }
tokio = { version = "1.0", features = ["macros",  "rt", "rt-multi-thread"] }
